Commented out scan, changed to coordinates. Also added one time flash to alert user where to look

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -194,10 +194,7 @@
         </p>
 
         <p id="chosenP2" hidden>
-            You chose ROW <span id="chosenRowSpan"> </span>, COL <span id="chosenColSpan"> </span> <br/>
-            Choose an action for this coordinate:<br/>
-            <button type="button" id="chosenFire" onclick="chosenFireFunc()">FIRE</button>
-            <button type="button" id="chosenScan" onclick="chosenScanFunc()">SCAN</button>
+            <b>You fired at [<span id="chosenRowSpan"> </span>, <span id="chosenColSpan"> </span>]!</b>
 
         </p>
 
