--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -194,7 +194,7 @@
         </p>
 
         <p id="chosenP2" hidden>
-            <b>You chose [<span id="chosenRowSpan"> </span>, <span id="chosenColSpan"> </span>]!</b><br/><br/>
+            <span id="chosenSentence"><b>You chose [<span id="chosenRowSpan"> </span>, <span id="chosenColSpan"> </span>]!</b></span><br/><br/>
             Choose an action for this coordinate:<br/>
             <button type="button" id="chosenFire" onclick="chosenFireFunc()">FIRE</button>
             <button type="button" id="chosenScan" onclick="chosenScanFunc()">SCAN</button>
