added buttons to switch between mode. Also changed to default to easy mode

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -41,6 +41,12 @@
 </div>
 
 <div id ="Options" class="GameOptions">
+    <p class="title">Change Difficulty Level</p>
+    <p class="center">
+        <button type="button" onclick="alert('easy');">&#9786; Easy mode &#9786;</button>
+        &nbsp; &nbsp;
+        <button type="button" onclick="alert('hard');">&#9763; HARD MODE &#9763;</button>
+    </p>
 	<p class = "title">Place a Ship</p>
 	<div class = "placeShip">
     <select name="shipSelec" id="shipSelec">
