Mode successfully switches easy to hard based on button presses. Creates new model and sends it back, and cleans up the board.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -43,6 +43,8 @@
 <div id ="Options" class="GameOptions">
     <p class="title">Change Difficulty Level</p>
     <p class="center">
+        The game defaults to easy mode, but if you'd like a bit of a challenge...
+        <br/>
         <button type="button" onclick="switchToEasyMode()">&#9786; Easy mode &#9786;</button>
         &nbsp; &nbsp;
         <button type="button" onclick="switchToHardMode()">&#9763; HARD MODE &#9763;</button>
